results/SVCOMP/0-shot/log-aastore_aaload1-2024_03_18_22_11_25.txt
import java.util.Random;

public class aastore_aaload1 {
  static class A {
    int value = 0;
  }

  /*@
    requires true;
    ensures (\forall int i; 0 <= i && i < size; array[i] != null);
  @*/
  public static void main(String[] args) {
    int size = new Random().nextInt();
    if (size < 0) return;
    A[] array = new A[size];

    /*@
      loop_invariant 0 <= i && i <= size;
      loop_invariant (\forall int j; 0 <= j && j < i; array[j] != null);
      decreases size - i;
    @*/
    for (int i = 0; i < size; i++) {
      array[i] = new A();
    }

    /*@
      loop_invariant 0 <= i && i <= size;
      loop_invariant (\forall int j; 0 <= j && j < i; array[j] != null);
      decreases size - i;
    @*/
    for (int i = 0; i < size; i++) {
      assert array[i] != null;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:10: error: cannot find symbol
    ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                          ^
  symbol:   variable size
  location: class aastore_aaload1
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:10: error: cannot find symbol
    ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                                ^
  symbol:   variable array
  location: class aastore_aaload1
2 errors

